--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "0.3.2",
+    "@react-navigation/native": "6.x",
+    "@react-navigation/stack": "6.x",
     "expo": "~54.0.23",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0"
   },
   "private": true
 }
