--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/native": "6.x",
     "@react-navigation/stack": "6.x",
+    "axios": "^1.13.2",
     "expo": "~54.0.23",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
